# defi-lending-risk-engine

./: .editorconfig  .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  install.sh  run-tests.sh  run.sh  test.sh  test_docker.sh  test_docker_subgraph.sh  test_subgraphs.sh
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/migrations/: 001_create_reserve_tables.sql  002_add_rate_and_price_fields.sql  003_add_protocol_events.sql  004_add_timestamp_columns.sql  005_add_tx_hash_column.sql  006_health_factor_snapshots.sql  007_health_factor_full_snapshots.sql
services/api/src/api/: config.py  main.py
services/api/src/api/db/: engine.py  events_repository.py  migrate.py  models.py  repository.py
services/api/src/api/domain/: health_factor.py  models.py
services/api/src/api/jobs/: backfill_aave_v3.py  ingest_aave_v3.py  ingest_events.py  ingest_snapshots.py  reset_and_backfill.py
services/api/src/api/routes/: __init__.py  debug.py  health_factors.py  markets.py  overview.py
services/api/src/api/schemas/: __init__.py  responses.py
services/api/src/api/utils/: __init__.py  timestamps.py
services/api/tests/: test_health.py
services/api/tests/adapters/aave_v3/: test_client.py  (+5 more)
services/api/tests/db/: test_events_repository.py  test_repository.py
services/api/tests/domain/: test_health_factor.py  test_models.py
services/api/tests/integration/: test_subgraphs.py
services/api/tests/jobs/: test_ingest_events.py
services/api/tests/routes/: test_health_factors.py
services/api/tests/utils/: test_timestamps.py
(+24 files in other folders)
