[tool.poetry]
name = "aave-risk-api"
version = "0.1.0"
description = "Aave v3 risk monitoring API"
authors = []
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../.."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
